--- a/style.css
+++ b/style.css
@@ -25,13 +25,41 @@
 
 .about-me{
     margin-top: 50px;
-}
-
-.header{
     font-family: 'Anek Tamil', sans-serif;
     font-family: 'Grape Nuts', cursive;
     font-family: 'Lato', sans-serif;
+    
+}
+
+.header{
     text-align: center;
     border-top: 1px solid #d3c8c8;
     padding-top: 50px;
+}
+
+.intro{
+    text-align: center; 
+}
+
+.pp2{
+    position: relative;
+    left: 100px;
+    height: 300px;
+    width: auto;
+    border-radius: 50px;
+}
+
+.job{
+    font-size: 25px;
+    position: relative;
+    text-align: center;
+    bottom: 300px;
+}
+
+.desc{
+    width: 50%;
+    position: relative;
+    bottom: 300px;
+    text-align: center; 
+    left: 380px;
 }
