--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@
     padding-top: 50px;
 }
 
+.header2{
+    text-align: center;
+    border-top: 1px solid #d3c8c8;
+    padding-top: 50px;
+}
+
 .intro{
     text-align: center; 
 }
