--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@
     text-align: center;
     border-top: 1px solid #d3c8c8;
     padding-top: 50px;
+    position: relative;
+    bottom: 300px;
 }
 
 .intro{
@@ -75,11 +77,29 @@
     line-height: 35px;
     left: 380px;
     bottom: 300px;
+    width: 50%;
 }
 
 .col2{
+    width: 50%;
     position: relative;
     line-height: 35px;
     left: 700px;
     bottom: 422px;
+}
+
+.sub{
+    position: relative;
+    bottom: 300px;
+    text-align: center;
+}
+
+.img{
+    width: 600px;
+    border: 1px solid brown;
+    margin-left: 40px;
+    margin-bottom: 40px;
+    position: relative;
+    left: 50px;
+    bottom: 300px;
 }
