--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@
 }
 
 .header{
+    font-family: 'Anek Tamil', sans-serif;
+    font-family: 'Grape Nuts', cursive;
+    font-family: 'Lato', sans-serif;
     text-align: center;
     border-top: 1px solid #d3c8c8;
     padding-top: 50px;
@@ -102,4 +105,22 @@
     position: relative;
     left: 50px;
     bottom: 300px;
+}
+
+
+.header3{
+    font-family: 'Anek Tamil', sans-serif;
+    font-family: 'Grape Nuts', cursive;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    border-top: 1px solid #d3c8c8;
+    padding-top: 50px;
+    position: relative;
+    bottom: 300px;
+}
+
+.sublist{
+    position: relative;
+    bottom: 300px;
+    left: 30px;
 }
