--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@
 }
 
 .header2{
+    font-family: 'Anek Tamil', sans-serif;
+    font-family: 'Grape Nuts', cursive;
+    font-family: 'Lato', sans-serif;
     text-align: center;
     border-top: 1px solid #d3c8c8;
     padding-top: 50px;
@@ -89,6 +92,9 @@
 }
 
 .sub{
+    font-family: 'Anek Tamil', sans-serif;
+    font-family: 'Grape Nuts', cursive;
+    font-family: 'Lato', sans-serif;
     position: relative;
     bottom: 300px;
     text-align: center;
@@ -120,14 +126,40 @@
     font-family: 'Grape Nuts', cursive;
     font-family: 'Lato', sans-serif;
     position: relative;
-    bottom: 300px;
-    left: 30px;
+    text-align: center;
 }
 
 .sk{
+    left: 355px;
     position: relative;
     bottom: 300px;
-    left: 30px;
     width: 50%;
     height: 30px;
+    margin-bottom: 50px;
+}
+
+/* progress{
+    margin-left: 30px;
+    height: 30px;
+    width: 150%;
+    
+} */
+
+
+progress {
+  -webkit-appearance: none;   
+    border-radius: 7px; 
+    width: 100%;
+}
+
+::-webkit-progress-bar {
+  background-color: #e8e8e8;
+    border-radius: 7px; 
+    width: 100%;
+}
+
+::-webkit-progress-value {
+  background-color: #04b191;
+    border-radius: 7px; 
+    width: 100%;
 }
