--- a/style.css
+++ b/style.css
@@ -127,23 +127,26 @@
     font-family: 'Lato', sans-serif;
     position: relative;
     text-align: center;
+    top: 10px;
+}
+
+.percentage{
+    text-align: center;
+    font-family: 'Anek Tamil', sans-serif;
+    font-family: 'Grape Nuts', cursive;
+    font-family: 'Lato', sans-serif;
 }
 
 .sk{
+    margin-top: 100px;
     left: 355px;
     position: relative;
-    bottom: 300px;
+    bottom: 370px;
     width: 50%;
     height: 30px;
     margin-bottom: 50px;
 }
 
-/* progress{
-    margin-left: 30px;
-    height: 30px;
-    width: 150%;
-    
-} */
 
 
 progress {
