--- a/style.css
+++ b/style.css
@@ -243,3 +243,13 @@ progress {
     font-family: 'Lato', sans-serif;
     font-size: 3rem;
 }
+
+.hide{
+    background: black;
+    overflow: hidden;
+}
+
+.hide span{
+    transform: translateY(100%);
+    display: inline-block;
+}
