--- a/style.css
+++ b/style.css
@@ -255,3 +255,80 @@ progress {
     display: inline-block;
     text-align: center;
 }
+
+@media (min-width: 399px)and (max-width: 768px) {
+    .name{
+        position: relative;
+        left: 100px;
+        top: 200px;
+    }
+    .pp{
+        width: auto;
+        height: 300px;
+        position: relative;
+        bottom: 40px;
+        right: 90px;
+    }
+    .navbar{
+        position: fixed;
+    z-index: 3;
+    margin-left: 20px;
+    right: 30px;
+    }
+    .pp2{
+        position: relative;
+        left: 10px;
+    }
+    .job{
+        position: relative;
+        left: 150px;
+    }
+    .desc{
+        position: relative;
+        left: 323px;
+        width: 50%;
+        font-size: 15px;
+    }
+    .col1{
+        position: relative;
+        left: 260px;
+        font-size: 13px;
+    }
+    .col2{
+        position: relative;
+        left: 490px;
+        font-size: 13px;
+    }
+    .first-section .img{
+        position: relative;
+        left: 0px;
+        margin-left: 0px;
+        width: 50%;
+    }
+    li{
+        width: 70%;
+        margin: 0px;
+    }
+    #i4, #i5, #i6{
+        position: relative;
+        left: 400px;
+        bottom: 989px;
+        width: 50%;
+        margin-left:0px;
+    }
+    #i6{
+        margin-bottom: 300px;
+    }
+    .sk{
+        position: relative;
+        left: 190px;
+    }
+    .text{
+        text-align: center;
+    }
+    .icons{
+        position: relative;
+        bottom: -200px;
+        left: 85px;
+    }
+}
