--- a/style.css
+++ b/style.css
@@ -2,30 +2,84 @@ body{
     font-family: 'Anek Tamil', sans-serif;
     font-family: 'Grape Nuts', cursive;
     font-family: 'Lato', sans-serif;
+    background-color: white;
 }
 .name {
     font-family: 'Anek Tamil', sans-serif;
     font-family: 'Grape Nuts', cursive;
     font-family: 'Lato', sans-serif;
-    position: relative;
-    left: 300px;
-    top: 300px;
-    width: 50%;
-    
+    font-size: 1.25rem;
+    width: fit-content;
+    margin-right: 5%;
+    margin-left: 20%;
+    margin-top: 20%;
+    margin-bottom: 20%;
+}
+
+.skill_icons{
+    width: 8rem;
+    height: 8rem;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 20%;
+    background-color: #fff;
+    box-shadow: 5px 5px gray;
+}
+
+.icons_container{
+    display: flex;
 }
 
 .icons{
     margin-left: 15px;
-    position: relative;
-    left: 283px;
-    bottom: 180px;
+}
+
+.icons:visited:hover {
+    transition: .3s ease;
+    color: #04b191;
+}
+
+#github_icon{
+    color: #343434;
+}
+
+#facebook_icon{
+    color: #4267B2;
+}
+
+#linkedin_icon{
+    color: #0077b5;
+}
+
+#instagram_icon{
+    color: #8a3ab9;
+}
+
+#github_icon:visited{
+    color: #343434;
+}
+
+#facebook_icon:visited{
+    color: #4267B2;
+}
+
+#linkedin_icon:visited{
+    color: #0077b5;
+}
+
+#instagram_icon:visited{
+    color: #8a3ab9;
 }
 
 .pp{
     border-radius: 30px;
     width: auto;
-    height: 500px;
-    margin-left: 600px;
+    height: 30rem;
+    margin-top: 10%;
+}
+
+.first-page{
+    display: flex;
 }
 
 .about-me{
@@ -42,6 +96,20 @@ body{
     padding-top: 50px;
 }
 
+.column_info{
+    display: flex;
+}
+
+.am-container{
+    display: flex;
+    max-height: 400px;
+    justify-content: center;
+}
+
+.personal_info{
+    margin-left: 3%;
+}
+
 .header2{
     font-family: 'Anek Tamil', sans-serif;
     font-family: 'Grape Nuts', cursive;
@@ -49,8 +117,6 @@ body{
     text-align: center;
     border-top: 1px solid #d3c8c8;
     padding-top: 50px;
-    position: relative;
-    bottom: 300px;
 }
 
 .intro{
@@ -59,7 +125,6 @@ body{
 
 .pp2{
     position: relative;
-    left: 100px;
     height: 300px;
     width: auto;
     border-radius: 50px;
@@ -67,33 +132,23 @@ body{
 
 .job{
     font-size: 25px;
-    position: relative;
     text-align: center;
-    bottom: 300px;
 }
 
 .desc{
-    width: 50%;
-    position: relative;
-    bottom: 300px;
     text-align: center; 
-    left: 380px;
 }
 
 .col1{
-    position: relative;
     line-height: 35px;
-    left: 380px;
-    bottom: 300px;
     width: 50%;
+    list-style-type: none;
 }
 
 .col2{
     width: 50%;
-    position: relative;
     line-height: 35px;
-    left: 700px;
-    bottom: 422px;
+    list-style-type: none;
 }
 
 .sub{
@@ -105,20 +160,84 @@ body{
     text-align: center;
 }
 
-.img{
-    width: 600px;
-    border: 1px solid brown;
-    margin-left: 40px;
-    margin-bottom: 40px;
-    position: relative;
-    left: 50px;
-    bottom: 300px;
+.pj_img{
+    width: 65%;
+    height: 60%;
+    opacity: 1;
+  
+    transition: .5s ease;
+    backface-visibility: hidden;
 }
 
-.img-section:hover .img{
+.pj_first_row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pj_second_row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pj_desc{
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: #45505B;
+}
+
+.pj_card{
+    position: relative;
+    text-align: center;
+    width: 21rem;
+    padding: 20px;
+    margin: 10px;
+}
+
+
+
+.pj_card:visited{
+    text-decoration: none;
+    color: #45505B;
+    box-shadow: 0 3px 10px #45505B;
+
+}
+
+.pj_card:hover{
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 3px 10px #45505B;
+}
+
+.pj_card:hover .pj_desc{
     opacity: 0.3;
-    transform: scale(0.9);
+}
+
+ .pj_card:hover .pj_img{
+    opacity: 0.3;
+}
+
+.pj_card_desc{
+    color: #04b191;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    transition: all ease-in-out 0.5s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
  }
+
+.pj_card:hover .pj_card_desc{
+    opacity: 1;
+} 
 
 .header3{
     font-family: 'Anek Tamil', sans-serif;
@@ -127,14 +246,11 @@ body{
     text-align: center;
     border-top: 1px solid #d3c8c8;
     padding-top: 50px;
-    position: relative;
-    bottom: 300px;
+
 }
 
 .instr{
     text-align: center;
-    position: relative;
-    bottom: 300px;
     font-family: 'Anek Tamil', sans-serif;
     font-family: 'Grape Nuts', cursive;
     font-family: 'Lato', sans-serif;
@@ -157,15 +273,12 @@ body{
 }
 
 .skills{
-    position: relative;
-    bottom: 800px;
+    text-align: center;
+    margin: auto;
 }
 
 .sk{
     margin-top: 100px;
-    left: 355px;
-    position: relative;
-    bottom: 370px;
     width: 50%;
     height: 30px;
     margin-bottom: 50px;
@@ -190,38 +303,43 @@ progress {
 }
 
 #i4, #i5, #i6{
-    position: relative;
-    left: 700px;
-    bottom: 1319px;
+    
 }
 
 .navbar{
     position: fixed;
     z-index: 3;
     margin-left: 20px;
-    right: 20px;
+    right: 50px;
 }
-
-
 
 .nicon{
     display: block;
     margin-top: 20px;
-    border: 1px solid black;
+    color: #45505B;
+    background-color: #F2F3F5;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 100%;
     text-align: center;
-    
 }
 
-.resume{
-    position: relative;
-    bottom: 700px;
+.nicon:hover {
+    background: none;
+    background-color: #04b191;
+    color: white;
+    transform: scale(1.1);
+    transition: all 0.2s ease-in-out;
 }
+
+.nicon:visited{
+    color: #45505B;
+}
+
+
 
 .beginning{
     z-index: 4;
-    background: rgb(238, 252, 162);
+    background: #04b191;
     position: fixed;
     top: 0;
     left: 0;
@@ -244,7 +362,7 @@ progress {
 }
 
 .intro-text{
-    color: rgb(52, 55, 252);
+    color: white;
     font-family: 'Anek Tamil', sans-serif;
     font-family: 'Grape Nuts', cursive;
     font-family: 'Lato', sans-serif;
@@ -277,79 +395,99 @@ footer{
     padding-bottom: 30px;
 }
 
-@media (min-width: 399px)and (max-width: 768px) {
-    .name{
-        position: relative;
-        left: 100px;
-        top: 200px;
+.timeline_container{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.timeline{
+    width: 80%;
+    height: auto;
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.timeline ul {
+   list-style-type: none;
+
+}
+
+.timeline ul li{
+    padding:20px;
+    background-color: #04b191;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.timeline_content h1{
+    
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 30px;  
+    margin-bottom: 10px;
+}
+
+.timeline_content p{
+    color: white;
+    font-size: 21px;
+    font-weight: 300;
+    line-height: 30px;
+}
+
+@media screen and (min-width: 768px) {
+    .timeline::before{
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 2px;
+        background-color: #04b191;
+        left: 50%;
+        transform: translateX(-50%);
     }
-    .pp{
-        width: auto;
-        height: 300px;
-        position: relative;
-        bottom: 40px;
-        right: 90px;
+
+    .timeline ul li::after{
+        content: '';
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background-color: #04b191;
+        border-radius: 50%;
+        border: 1px solid #04b191;
+        top:0;
     }
-    .navbar{
-        position: fixed;
-    z-index: 3;
-    margin-left: 20px;
-    right: 60px;
+    .timeline ul li:nth-child(odd)::after{
+        right: -10px;
+        transform: translate(50%, -100%);    
     }
-    .pp2{
-        position: relative;
-        left: 10px;
+    .timeline ul li:nth-child(even)::after{
+        left: -32px;
+        transform: translate(50%, -100%);    
     }
-    .job{
-        position: relative;
-        left: 150px;
-    }
-    .desc{
-        position: relative;
-        left: 323px;
+    .timeline ul li{
         width: 50%;
-        font-size: 15px;
-    }
-    .col1{
+        margin-bottom: 50px;
         position: relative;
-        left: 260px;
-        font-size: 13px;
+     }
+    .timeline ul li:nth-child(odd){
+        float: left;
+        clear: right;
+        transform: translateX(-70px);
     }
-    .col2{
-        position: relative;
-        left: 490px;
-        font-size: 13px;
+    .timeline ul li:nth-child(even){
+        float: right; 
+        clear: left;
+        transform: translateX(30px);
     }
-    .first-section .img{
-        position: relative;
-        left: 0px;
-        margin-left: 0px;
-        width: 50%;
-    }
-    li{
-        width: 70%;
-        margin: 0px;
-    }
-    #i4, #i5, #i6{
-        position: relative;
-        left: 400px;
-        bottom: 989px;
-        width: 50%;
-        margin-left:0px;
-    }
-    #i6{
-        margin-bottom: 300px;
-    }
-    .sk{
-        position: relative;
-        left: 190px;
-    }
-    .text{
-        text-align: center;
-    }
-    .icons{
-        position: relative;
-        bottom: -200px;
-        left: 85px;
+    .timeline ul li:hover:after{
+        transition: all ease-in-out 0.2s;;
+        background-color: white;
     }
 }
