--- a/style.css
+++ b/style.css
@@ -642,11 +642,11 @@ footer {
         justify-content: center;
     }
     .pj_desc{
-        font-size: 0.5rem;
+        font-size: 1rem;
     }
     .pj_img{
-        width: 100%;
-        height: 100%;
+        width: 75%;
+        height: auto;
     }
     .pj_card{
         width: 100%;
@@ -813,7 +813,8 @@ footer {
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
+    
     .pj_first_row{
         display: flex;
     }
